Fix dbus setCurrentSession focus

It was only giving focus to terminal but not the tab.

BUG: 422262
FIXED-IN: 20.12